--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} 比特币将被存入公会的账户，这是不可逆转的",
+ 	 	 	 	 	"trans": "${amount} 比特币将被存入帮派的账户，这是不可逆转的",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -49,23 +49,23 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "请输入你的公会简介",
+ 	 	 	 	 	 	"trans": "请输入你的帮派口号",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "编辑公会简介",
+ 	 	 	 	 	"trans": "编辑帮派口号",
  	 	 	 	 	"eng": "Edit Gang Motto"
  	 	 	 	}
  	 	 	},
  	 	 	"updateImage": {
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "更新公会图像",
+ 	 	 	 	 	"trans": "更新帮派图像",
  	 	 	 	 	"eng": "Update Gang Image"
  	 	 	 	}
  	 	 	},
  	 	 	"level": {
- 	 	 	 	"trans": "公会等级",
+ 	 	 	 	"trans": "帮派等级",
  	 	 	 	"eng": "Gang Level"
  	 	 	},
  	 	 	"resource": {
@@ -105,7 +105,7 @@
  	 	 	},
  	 	 	"occupation": {
  	 	 	 	"noClan": {
- 	 	 	 	 	"trans": "暂时没有公会占据这个地区",
+ 	 	 	 	 	"trans": "暂时没有帮派占据这个地区",
  	 	 	 	 	"eng": "No gang has occupied this area yet"
  	 	 	 	}
  	 	 	},
@@ -336,7 +336,7 @@
  	 	 	 	"eng": "chat"
  	 	 	},
  	 	 	"gang": {
- 	 	 	 	"trans": "公会",
+ 	 	 	 	"trans": "帮派",
  	 	 	 	"eng": "gang"
  	 	 	},
  	 	 	"mail": {
@@ -818,7 +818,7 @@
  	 	 	},
  	 	 	"gangAction": {
  	 	 	 	"label": {
- 	 	 	 	 	"trans": "公会指令",
+ 	 	 	 	 	"trans": "帮派指令",
  	 	 	 	 	"eng": "Gang Actions"
  	 	 	 	},
  	 	 	 	"kick": {
@@ -830,7 +830,7 @@
  	 	 	 	 	"eng": "Permissions"
  	 	 	 	},
  	 	 	 	"transferLeadership": {
- 	 	 	 	 	"trans": "转交公会头目身份",
+ 	 	 	 	 	"trans": "转交帮派头目身份",
  	 	 	 	 	"eng": "Transfer Leadership"
  	 	 	 	}
  	 	 	},
@@ -848,7 +848,7 @@
  	 	 	 	 	"eng": "Send Gift"
  	 	 	 	},
  	 	 	 	"inviteToGang": {
- 	 	 	 	 	"trans": "邀请至公会",
+ 	 	 	 	 	"trans": "邀请至帮派",
  	 	 	 	 	"eng": "Invite to Gang"
  	 	 	 	},
  	 	 	 	"addToFriend": {
@@ -1289,7 +1289,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"receiveClanNotification": {
- 	 	 	 	"trans": "接收公会通知",
+ 	 	 	 	"trans": "接收帮派通知",
  	 	 	 	"eng": "Receive Gang Notification"
  	 	 	},
  	 	 	"receiveGlobalNotification": {
@@ -1427,19 +1427,19 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "将帮派等级分配给${playerName}",
+ 	 	 	 	 	"trans": "给${playerName}分配帮派品级",
  	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
  	 	 	 	},
  	 	 	 	"description": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "分配帮派排名将花费您${cost} BTC，并要求重新启动游戏才能查看更改",
+ 	 	 	 	 	"trans": "分配帮派品级将花费您${cost}比特币，并需要重新启动游戏才能查看更改",
  	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
  	 	 	 	},
  	 	 	 	"input": {
  	 	 	 	 	"label": {
- 	 	 	 	 	 	"trans": "等级名称",
+ 	 	 	 	 	 	"trans": "品级名称",
  	 	 	 	 	 	"eng": "Rank Name"
  	 	 	 	 	},
  	 	 	 	 	"error": {
@@ -1448,7 +1448,7 @@
  	 	 	 	 	 	 	 	"minLength",
  	 	 	 	 	 	 	 	"maxLength"
  	 	 	 	 	 	 	],
- 	 	 	 	 	 	 	"trans": "等级名称必须在${minLength}和${maxLength}字符之间",
+ 	 	 	 	 	 	 	"trans": "品级名称必须在${minLength}和${maxLength}字符之间",
  	 	 	 	 	 	 	"eng": "Rank name must be between ${minLength} and ${maxLength} characters"
  	 	 	 	 	 	}
  	 	 	 	 	}
@@ -1466,7 +1466,7 @@
  	 	 	 	 	"eng": "View Profile"
  	 	 	 	},
  	 	 	 	"assignRank": {
- 	 	 	 	 	"trans": "分配等级",
+ 	 	 	 	 	"trans": "分配品级",
  	 	 	 	 	"eng": "Assign Rank"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
@@ -1475,7 +1475,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "你确定要从公会中移除这个玩家吗？",
+ 	 	 	 	"trans": "你确定要从帮派中移除这个玩家吗？",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
  	 	 	},
  	 	 	"memberContribution": {
@@ -2273,11 +2273,11 @@
  	},
  	"cost": {
  	 	"requireGang": {
- 	 	 	"trans": "需要加入一个公会",
+ 	 	 	"trans": "需要加入一个帮派",
  	 	 	"eng": "Requires you to be in a gang"
  	 	},
  	 	"requireTopGang": {
- 	 	 	"trans": "需要你在占领控制榜上排名前二的公会里",
+ 	 	 	"trans": "需要你在占领控制榜上排名前二的帮派里",
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
@@ -2616,21 +2616,21 @@
  	 	 	"vars": [
  	 	 	 	"clanResource"
  	 	 	],
- 	 	 	"trans": "${clanResource} 公会资源",
+ 	 	 	"trans": "${clanResource} 帮派资源",
  	 	 	"eng": "${clanResource} gang resource"
  	 	},
  	 	"gangExp": {
  	 	 	"vars": [
  	 	 	 	"clanExp"
  	 	 	],
- 	 	 	"trans": "${clanExp} 公会经验",
+ 	 	 	"trans": "${clanExp} 帮派经验",
  	 	 	"eng": "${clanExp} gang exp"
  	 	},
  	 	"gangFunding": {
  	 	 	"vars": [
  	 	 	 	"clanMoney"
  	 	 	],
- 	 	 	"trans": "${clanMoney} 公会资金",
+ 	 	 	"trans": "${clanMoney} 帮派资金",
  	 	 	"eng": "${clanMoney} gang funding"
  	 	},
  	 	"gangOccupationPoint": {
@@ -3126,11 +3126,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制公会口号",
+ 	 	 	 	 	"trans": "定制帮派口号",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "定制公会图像",
+ 	 	 	 	 	"trans": "定制帮派图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3170,7 +3170,7 @@
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "定制公会图像",
+ 	 	 	 	 	"trans": "定制帮派图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3214,11 +3214,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "定制公会口号",
+ 	 	 	 	 	"trans": "定制帮派口号",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"10": {
- 	 	 	 	 	"trans": "定制公会图像",
+ 	 	 	 	 	"trans": "定制帮派图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"11": {
@@ -3262,7 +3262,7 @@
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "定制公会图像",
+ 	 	 	 	 	"trans": "定制帮派图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3302,7 +3302,7 @@
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "定制公会图像",
+ 	 	 	 	 	"trans": "定制帮派图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3539,7 +3539,7 @@
  	 	},
  	 	"healing5": {
  	 	 	"name": {
- 	 	 	 	"trans": "军用纳米医疗机器人",
+ 	 	 	 	"trans": "军用级纳米医疗机器人",
  	 	 	 	"eng": "Military Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -3569,7 +3569,7 @@
  	 	},
  	 	"healing8": {
  	 	 	"name": {
- 	 	 	 	"trans": "稀有纳米医疗机器人",
+ 	 	 	 	"trans": "稀有级纳米医疗机器人",
  	 	 	 	"eng": "Rare Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -3579,7 +3579,7 @@
  	 	},
  	 	"healing9": {
  	 	 	"name": {
- 	 	 	 	"trans": "传奇纳米医疗机器人",
+ 	 	 	 	"trans": "传奇级纳米医疗机器人",
  	 	 	 	"eng": "Legendary Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -3589,7 +3589,7 @@
  	 	},
  	 	"healing10": {
  	 	 	"name": {
- 	 	 	 	"trans": "史诗纳米医疗机器人",
+ 	 	 	 	"trans": "史诗级纳米医疗机器人",
  	 	 	 	"eng": "Epic Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -3599,11 +3599,11 @@
  	 	},
  	 	"healing11": {
  	 	 	"name": {
- 	 	 	 	"trans": "声望Nano Medic Bot",
+ 	 	 	 	"trans": "尊贵级纳米医疗机器人",
  	 	 	 	"eng": "Prestige Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "可以预先使用军事用途的可注射的纳米机器，能够在战斗情况下修补伤害",
+ 	 	 	 	"trans": "可注射的军用纳米机器，能够在战斗期间中修补伤势",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -3649,7 +3649,7 @@
  	 	},
  	 	"healingArea5": {
  	 	 	"name": {
- 	 	 	 	"trans": "军用纳米医疗无人机",
+ 	 	 	 	"trans": "军用级纳米医疗无人机",
  	 	 	 	"eng": "Military Nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -3679,7 +3679,7 @@
  	 	},
  	 	"healingArea8": {
  	 	 	"name": {
- 	 	 	 	"trans": "稀有纳米医疗无人机",
+ 	 	 	 	"trans": "稀有级纳米医疗无人机",
  	 	 	 	"eng": "Rare Nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -3689,7 +3689,7 @@
  	 	},
  	 	"healingArea9": {
  	 	 	"name": {
- 	 	 	 	"trans": "传奇纳米医疗无人机",
+ 	 	 	 	"trans": "传奇级纳米医疗无人机",
  	 	 	 	"eng": "Legendary Nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -3699,7 +3699,7 @@
  	 	},
  	 	"healingArea10": {
  	 	 	"name": {
- 	 	 	 	"trans": "史诗纳米医疗无人机",
+ 	 	 	 	"trans": "史诗级纳米医疗无人机",
  	 	 	 	"eng": "Epic Nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -3812,31 +3812,31 @@
  	 	},
  	 	"clanDungeonKey": {
  	 	 	"name": {
- 	 	 	 	"trans": "公会入侵信号散播装置",
+ 	 	 	 	"trans": "帮派入侵信号散播装置",
  	 	 	 	"eng": "Gang Invasion Order Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一个简单的散播装置，可以与您的公会加密通道进行绑定并提供入侵命令。 \r\n        公会地下城需要激活此物品才可进入",
+ 	 	 	 	"trans": "一个简单的散播装置，可以与您的帮派加密通道进行绑定并提供入侵命令。 \r\n        帮派地下城需要激活此物品才可进入",
  	 	 	 	"eng": "A simple transmitter device that can be bind to your gang encrypted channel and give out invasion order.\r\n        This item is required to activate Gang Dungeons"
  	 	 	}
  	 	},
  	 	"clanResource": {
  	 	 	"name": {
- 	 	 	 	"trans": "供应箱[公会]",
+ 	 	 	 	"trans": "供应箱[帮派]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "包含着维持公会运行的杂项物品和资源， \r\n         单击用来将其发送给您的公会总部",
+ 	 	 	 	"trans": "包含着维持帮派运行的杂项物品和资源， \r\n         单击用来将其发送给您的帮派总部",
  	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
  	 	 	"name": {
- 	 	 	 	"trans": "加密的公会记忆碎片",
+ 	 	 	 	"trans": "加密的帮派记忆碎片",
  	 	 	 	"eng": "encrypted gang memory shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一个包含公会秘密的记忆碎片, \r\n        在你的公会总部破译以获得有用的情报 (需要加入一个公会)",
+ 	 	 	 	"trans": "一个包含帮派秘密的记忆碎片, \r\n        在你的帮派总部破译以获得有用的情报 (需要加入一个帮派)",
  	 	 	 	"eng": "A memory shard contains encrypted gang secrets, \r\n        decrypt this in your gang headquarters to gain useful intel (requires to be in a gang)"
  	 	 	}
  	 	},
@@ -3895,7 +3895,7 @@
  	 	 	 	"eng": "Calibration AI Shard (50%) [EVENT]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "含有先进AI的碎片，旨在协助升级设备。 \r\n         使用后，在5分钟内破坏性故障发生的概率降低50％。 效果仅对自己生效。 \r\n         您可以在您的公会总部校准物品，但必须先加入或创建一个公会。",
+ 	 	 	 	"trans": "含有先进AI的碎片，旨在协助升级设备。 \r\n         使用后，在5分钟内破坏性故障发生的概率降低50％。 效果仅对自己生效。 \r\n         您可以在您的帮派总部校准物品，但必须先加入或创建一个帮派。",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments.\r\n        When used, decreases the chance of destructive failure by 50% for 5 minutes. this only affect yourself.\r\n        You can calibrate items in your Gang Headquarters, you must join or start a gang first."
  	 	 	}
  	 	},
@@ -4224,7 +4224,7 @@
  	 	 	},
  	 	 	"toGang": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "前往公会总部",
+ 	 	 	 	 	"trans": "前往帮派总部",
  	 	 	 	 	"eng": "Go to gang headquarters"
  	 	 	 	}
  	 	 	}
@@ -4273,15 +4273,15 @@
  	 	},
  	 	"gang": {
  	 	 	"name": {
- 	 	 	 	"trans": "公会总部",
+ 	 	 	 	"trans": "帮派总部",
  	 	 	 	"eng": "Gang Headquarters"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[公会]\r\n        你和你的公会成员计划和执行下一次行动的总部",
+ 	 	 	 	"trans": "[帮派]\r\n        你和你的帮派成员计划和执行下一次行动的总部",
  	 	 	 	"eng": "[Gang]\r\n        The headquarters for you and your gang members to plan and execute your next operation"
  	 	 	},
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "您需要加入公会来进入此区域",
+ 	 	 	 	"trans": "您需要加入帮派来进入此区域",
  	 	 	 	"eng": "You need to join a gang to enter this area"
  	 	 	}
  	 	},
@@ -4646,7 +4646,7 @@
  	 	},
  	 	"clanResource": {
  	 	 	"name": {
- 	 	 	 	"trans": "收集公会资源",
+ 	 	 	 	"trans": "收集帮派资源",
  	 	 	 	"eng": "Gather Gang Resource"
  	 	 	},
  	 	 	"description": {
@@ -4690,7 +4690,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko s plus pro max"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Konnichiwa !! 乌武 \r\n         你今天感觉很富有吗？ \r\n         现在只需要1,000,000 BTC一次（限时特别优惠！）即可有0.1％的机会赢得史诗级别的物品！",
+ 	 	 	 	"trans": "Konnichiwa !! 乌武 \r\n         你今天感觉很富有吗？ \r\n         现在只需要1,000,000 比特币一次（限时特别优惠！）即可有0.1％的机会赢得史诗级别的物品！",
  	 	 	 	"eng": "Konnichiwa!! UwU\r\n        Are you feeling rich and lucky today?\r\n        play now only 1,000,000 btc once (limited time special offer!) with 0.1% chance to win a EPIC item! \r\n        "
  	 	 	}
  	 	},
@@ -4700,7 +4700,7 @@
  	 	 	 	"eng": "Collect Protection Fees"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "贿赂政府官员和SLPD，并从香格里拉的商人和公民收取保护费。 也许你会从中获得一些史诗级别的物品？ （仅限于占领控制榜排名前二的公会）",
+ 	 	 	 	"trans": "贿赂政府官员和SLPD，并从香格里拉的商人和公民收取保护费。 也许你会从中获得一些史诗级别的物品？ （仅限于占领控制榜排名前二的帮派）",
  	 	 	 	"eng": "Bribe government officials and the SLPD to collect protection fees from business owners and citizens in Shangri-La. Maybe you’ll get some EPIC items from them? (Exclusive to the Top 2 Gangs on the Occupation Leaderboard"
  	 	 	}
  	 	},
@@ -5044,7 +5044,7 @@
  	 	 	"vars": [
  	 	 	 	"money"
  	 	 	],
- 	 	 	"trans": "你获得了${money} BTC",
+ 	 	 	"trans": "你获得了${money}比特币",
  	 	 	"eng": "You received ${money} BTC"
  	 	},
  	 	"exp": {
@@ -5141,7 +5141,7 @@
  	 	 	 	 	"keyFragmentDisplayName",
  	 	 	 	 	"expMultiplier"
  	 	 	 	],
- 	 	 	 	"trans": "推荐级别：${maxLevel}+ 与玩家合作 \r\n                     获取${expMultiplier} 倍的经验！ \r\n                     公会模式地下城，额外的战利品和经验。 \r\n                     老板滴是罕见的+ \r\n                     如果您的水平太低，并不建议进入",
+ 	 	 	 	"trans": "推荐级别：${maxLevel}+ 与玩家合作 \r\n                     获取${expMultiplier} 倍的经验！ \r\n                     帮派模式地下城，额外的战利品和经验。 \r\n                     老板滴是罕见的+ \r\n                     如果您的水平太低，并不建议进入",
  	 	 	 	"eng": "Recommended Level: ${maxLevel}+ with co-op\r\n                    ${2.3}x more EXP! and 4~5x stronger enemies!\r\n                    Gang mode dungeon, extra loot and exp.\r\n                    *Not for the faint of heart*"
  	 	 	}
  	 	},
@@ -5481,7 +5481,7 @@
  	 	 	 	"eng": "View Profile"
  	 	 	},
  	 	 	"openPlayerGang": {
- 	 	 	 	"trans": "查看公会",
+ 	 	 	 	"trans": "查看帮派",
  	 	 	 	"eng": "View Gang"
  	 	 	},
  	 	 	"sendGift": {
@@ -5744,15 +5744,15 @@
  	 	 	 	"trans": "邀请",
  	 	 	 	"eng": "Invite",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "邀请其他球员加入您的帮派。",
+ 	 	 	 	 	"trans": "邀请其他玩家加入您的帮派。",
  	 	 	 	 	"eng": "Invite other players to join your gang."
  	 	 	 	}
  	 	 	},
  	 	 	"kick": {
- 	 	 	 	"trans": "踢",
+ 	 	 	 	"trans": "移除",
  	 	 	 	"eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "从帮派踢其他球员。",
+ 	 	 	 	 	"trans": "从帮派移除其他玩家。",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
@@ -5760,7 +5760,7 @@
  	 	 	 	"trans": "管理",
  	 	 	 	"eng": "Manage",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "允许该玩家管理其他玩家的许可",
+ 	 	 	 	 	"trans": "允许该玩家管理其他玩家的权限",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
  	 	 	}
