--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -3763,7 +3763,7 @@
  	 	 	 	"eng": "Frontal Cortex Optimization Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "사이버넷으로 연결된 모든 사용자에게 취약점을 알려, 설치된 사이버기기와 전두엽의 연결을 향상시켜, 사용자의 기억능력을 향상시킵니다. \r\n\r\n         사용할 경우 모든 온라인 플레이어들에게 글로벌 버프를 제공하여, 20분 동안 경험치 획득량을 180% 증가시킵니다 (중첩가능).",
+ 	 	 	 	"trans": "사이버넷으로 연결된 모든 사용자에게 취약점을 알려, 설치된 사이버기기와 전두엽의 연결을 향상시켜, 사용자의 기억능력을 향상시킵니다. \r\n\r\n         사용할 경우 모든 온라인 플레이어들에게 글로벌 버프를 제공하여, 20분 동안 경험치 획득량을 180% 증가시킵니다.",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, enhancing their Frontal Cortex integration with cyberwares installed, thus increasing memory capability of the user.\r\n\r\n        When used, gives Global Buff to all players online, increase EXP gained to 180% for 20 minutes\r\n        "
  	 	 	}
  	 	},
@@ -3826,7 +3826,7 @@
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "갱단이 활동하기 위한 잡다한 아이템과 자원들이 들어 있습니다. \r\n         갱단 본부에 보내려면 '사용'을 클릭하십시오",
+ 	 	 	 	"trans": "갱단이 활동하기 위한 잡다한 아이템과 자원들이 들어 있습니다. \r\n         갱단 본부에서 '갱 자원 수집'을 통해 자원을 보낼 수 있습니다. (갱단에 가입되어 있어야 합니다)",
  	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
  	 	 	}
  	 	},
@@ -3836,7 +3836,7 @@
  	 	 	 	"eng": "encrypted gang memory shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "암호화된 갱 메모리 샤드에는 암호화된 갱단의 기밀들이 들어있습니다. \r\n         갱단 본부에서 해독하여 유용한 정보를 얻으세요 (갱단에 가입되어 있어야 합니다).",
+ 	 	 	 	"trans": "암호화된 갱 메모리 샤드에는 암호화된 갱단의 기밀들이 들어있습니다. \r\n         갱단 본부에서 해독하여 유용한 정보를 얻으세요. (갱단에 가입되어 있어야 합니다)",
  	 	 	 	"eng": "A memory shard contains encrypted gang secrets, \r\n        decrypt this in your gang headquarters to gain useful intel (requires to be in a gang)"
  	 	 	}
  	 	},
