--- a/contribution/lang/tl.json
+++ b/contribution/lang/tl.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Makipag -chat",
+ 	 	 	"trans": "Makipag-usap",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -24,21 +24,21 @@
  	"ui": {
  	 	"blackMarket": {
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "I -print at ibenta",
+ 	 	 	 	"trans": "I-printa at ibenta",
  	 	 	 	"eng": "Print And Sell"
  	 	 	}
  	 	},
  	 	"clan": {
  	 	 	"selectDepositAmount": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Mangyaring ipasok ang halagang nais mong magdeposito",
+ 	 	 	 	 	"trans": "Mangyaring ilagay ang halagang nais mong i-deposito",
  	 	 	 	 	"eng": "Please enter amount you want to deposit"
  	 	 	 	},
  	 	 	 	"detail": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} bitcoin will be deposited into your gang account. This cannot be reversed",
+ 	 	 	 	 	"trans": "Ang ${amount} bitcoin ay mai-dedeposito sa iyong gang account. Hindi na ito mababalik pa",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -49,18 +49,18 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Mangyaring ipasok ang iyong gang motto",
+ 	 	 	 	 	 	"trans": "Mangyaring ilagay ang salawikain o kasabihan ng iyong gang",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "I -edit ang gang motto",
+ 	 	 	 	 	"trans": "Ibahin ang salawikain ng gang",
  	 	 	 	 	"eng": "Edit Gang Motto"
  	 	 	 	}
  	 	 	},
  	 	 	"updateImage": {
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "I -update ang imahe ng gang",
+ 	 	 	 	 	"trans": "Baguhin ang larawan ng gang",
  	 	 	 	 	"eng": "Update Gang Image"
  	 	 	 	}
  	 	 	},
@@ -81,7 +81,7 @@
  	 	 	 	"eng": "members"
  	 	 	},
  	 	 	"occupationPoint": {
- 	 	 	 	"trans": "Kontrolin ang Shangri-la",
+ 	 	 	 	"trans": "Kontrol sa Shangri-la",
  	 	 	 	"eng": "Control over Shangri-la"
  	 	 	},
  	 	 	"nextUpkeepDate": {
@@ -96,11 +96,11 @@
  	 	 	 	"eng": "resource critical"
  	 	 	},
  	 	 	"insufficientFound": {
- 	 	 	 	"trans": "Hindi sapat na pondo",
+ 	 	 	 	"trans": "Hindi sapat ang pondo",
  	 	 	 	"eng": "Insufficient Funds"
  	 	 	},
  	 	 	"insufficientResource": {
- 	 	 	 	"trans": "Hindi sapat na mapagkukunan",
+ 	 	 	 	"trans": "Hindi sapat ang pinagkukunan",
  	 	 	 	"eng": "Insufficient Resources"
  	 	 	},
  	 	 	"occupation": {
@@ -120,7 +120,7 @@
  	 	 	 	"eng": "Community Content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Ang nilalamang ito ay naiambag ng komunidad. Mag -click dito upang mag -ambag ng iyong sariling nilalaman.",
+ 	 	 	 	"trans": "Ang nilalamang ito ay naiambag ng komunidad. Pindutin ito upang mag-ambag ng iyong sariling nilalaman.",
  	 	 	 	"eng": "This content is contributed by the community. click here to contribute your own content."
  	 	 	}
  	 	},
@@ -137,12 +137,12 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Natagpuan mo ang isang naka -lock na kahon ng pagnakawan na may kulay keypad, dapat mong i -unlock ito ng tamang pagkakasunud -sunod ng mga kulay.",
+ 	 	 	 	 	"trans": "Natagpuan mo ang isang nakakandado na kahon na may kulay ang keypad, dapat mabuksan mo ito gamit ang tamang pagkakasunod-sunod ng mga kulay.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "I -unlock ang pag -unlad",
+ 	 	 	 	 	 	"trans": "I-unlock ang pag-unlad",
  	 	 	 	 	 	"eng": "Unlock progress"
  	 	 	 	 	}
  	 	 	 	},
@@ -151,7 +151,7 @@
  	 	 	 	 	"eng": "seconds"
  	 	 	 	},
  	 	 	 	"colorBox": {
- 	 	 	 	 	"trans": "Mag -click sa kulay na ito sa ibaba",
+ 	 	 	 	 	"trans": "Pindutin ang kulay na ito sa ibaba",
  	 	 	 	 	"eng": "Click on this color below"
  	 	 	 	},
  	 	 	 	"lose": {
@@ -160,7 +160,7 @@
  	 	 	 	 	 	"eng": "Decryption failed"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Mag -click sa tamang pagkakasunud -sunod ng kulay upang i -unlock",
+ 	 	 	 	 	 	"trans": "Pindutin ang tamang pagkakasunud-sunod ng kulay upang mabuksan",
  	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
  	 	 	 	 	},
  	 	 	 	 	"button": {
@@ -174,17 +174,17 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Ang mga tao ng Ukraine, Russia at ang buong mundo ay nagdurusa dahil ang ambisyon ng isang tao.",
+ 	 	 	 	"trans": "Ang mga tao sa Ukraine, Russia at sa buong mundo ay nagdurusa dahil sa ambisyon ng isang tao.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
  	 	"bank": {
  	 	 	"balance": {
- 	 	 	 	"trans": "balansehin",
+ 	 	 	 	"trans": "Natitira",
  	 	 	 	"eng": "balance"
  	 	 	},
  	 	 	"deposit": {
- 	 	 	 	"trans": "Deposito",
+ 	 	 	 	"trans": "Mag deposito",
  	 	 	 	"eng": "Deposit"
  	 	 	},
  	 	 	"depositDesc": {
@@ -192,23 +192,23 @@
  	 	 	 	"eng": "Put Bitcoins into bank"
  	 	 	},
  	 	 	"withdraw": {
- 	 	 	 	"trans": "Bawiin",
+ 	 	 	 	"trans": "Kuhanin",
  	 	 	 	"eng": "Withdraw"
  	 	 	},
  	 	 	"withdrawDesc": {
- 	 	 	 	"trans": "Kumuha ng mga bitcoins sa labas ng bangko",
+ 	 	 	 	"trans": "Alisin ang mga Bitcoins sa bangko",
  	 	 	 	"eng": "Take Bitcoins out of bank"
  	 	 	},
  	 	 	"putItemToVault": {
- 	 	 	 	"trans": "I -deposito ang item",
+ 	 	 	 	"trans": "I-deposito ang aytem",
  	 	 	 	"eng": "Deposit Item"
  	 	 	},
  	 	 	"putItemToVaultDesc": {
- 	 	 	 	"trans": "Ilagay ang mga item sa iyong vault",
+ 	 	 	 	"trans": "Ilagay ang mga aytem sa iyong vault",
  	 	 	 	"eng": "Put items into your vault"
  	 	 	},
  	 	 	"takeItemFromVault": {
- 	 	 	 	"trans": "Bawiin ang item",
+ 	 	 	 	"trans": "Kunin ang aytem",
  	 	 	 	"eng": "Withdraw Item"
  	 	 	},
  	 	 	"takeItemFromVaultDesc": {
@@ -235,20 +235,20 @@
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "Ilan ang nais mong umatras mula sa bangko?",
+ 	 	 	 	 	"trans": "Ilan ang nais mong kuhain mula sa bangko?",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
- 	 	 	 	 	"trans": "Gaano karami ang nais mong ideposito?",
+ 	 	 	 	 	"trans": "Magkano ang gusto mong i-deposito?",
  	 	 	 	 	"eng": "How much would you like to deposit?"
  	 	 	 	},
  	 	 	 	"selectWithdraw": {
- 	 	 	 	 	"trans": "Gaano karami ang nais mong bawiin?",
+ 	 	 	 	 	"trans": "Magkano ang gusto mong kuhanin?",
  	 	 	 	 	"eng": "How much would you like to withdraw?"
  	 	 	 	}
  	 	 	},
  	 	 	"noBalance": {
- 	 	 	 	"trans": "You can't withdraw without a balance.",
+ 	 	 	 	"trans": "Hindi ka makakapag-withdraw kapag wala kang balance.",
  	 	 	 	"eng": "You can't withdraw when you have no balance."
  	 	 	}
  	 	},
@@ -256,7 +256,7 @@
  	 	 	"attackButton": {
  	 	 	 	"primary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Pangunahing",
+ 	 	 	 	 	 	"trans": "Pangunahin",
  	 	 	 	 	 	"eng": "primary"
  	 	 	 	 	}
  	 	 	 	},
@@ -276,11 +276,11 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "You found an old locked safe box. There is a post-it with some text written on it.",
+ 	 	 	 	"trans": "Nakakita ka ng lumang kahon na nakakandado, May post-it na may nakasulat na ilang teksto.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
- 	 	 	 	"trans": "Kinakailangan ang PIN code upang i -unlock",
+ 	 	 	 	"trans": "Kinakailangan ang pin code upang mabuksan",
  	 	 	 	"eng": "Pin code required to unlock"
  	 	 	},
  	 	 	"inputLabel": {
@@ -288,13 +288,13 @@
  	 	 	 	"eng": "Pin Code"
  	 	 	},
  	 	 	"inputPlaceholder": {
- 	 	 	 	"trans": "Ipasok ang PIN code",
+ 	 	 	 	"trans": "Ilagay ang PIN code",
  	 	 	 	"eng": "Enter pin code"
  	 	 	}
  	 	},
  	 	"chat": {
  	 	 	"reconnecting": {
- 	 	 	 	"trans": "Pag -aayos ng Koneksyon",
+ 	 	 	 	"trans": "Muling pagtatatag ng koneksyon",
  	 	 	 	"eng": "Reestablishing connection"
  	 	 	},
  	 	 	"notAtBottom": {
@@ -305,34 +305,34 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerName"
  	 	 	 	],
- 	 	 	 	"trans": "Sumagot sa ${playerName}",
+ 	 	 	 	"trans": "Sumasagot kay ${playerName}",
  	 	 	 	"eng": "Replying to ${playerName}"
  	 	 	},
  	 	 	"linksNotAllowed": {
- 	 	 	 	"trans": "Hindi pinapayagan ang mga link",
+ 	 	 	 	"trans": "Hindi pinapayagan ang mga links",
  	 	 	 	"eng": "Links are not allowed"
  	 	 	},
  	 	 	"spamBlock": {
- 	 	 	 	"trans": "Please do not send meaningless messages. Spam will be muted.",
+ 	 	 	 	"trans": "Mangyaring huwag magpadala ng walang kabuluhang mensahe, imu-mute ang mga mag i-spam.",
  	 	 	 	"eng": "Please do not send meaningless message, spams will be muted."
  	 	 	},
  	 	 	"repeatBlock": {
- 	 	 	 	"trans": "Please do not send the same message repeatedly. Spam will be muted.",
+ 	 	 	 	"trans": "Mangyaring huwag magpadala ng parehong mensahe nang paulit-ulit. imu-mute ang mga mag i-spam.",
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
- 	 	 	 	"trans": "Please do not send short messages. Try a longer sentence instead.",
+ 	 	 	 	"trans": "Mangyaring huwag magpadala ng mga maikling mensahe, sa halip subukan ang mas mahabang pangungusap.",
  	 	 	 	"eng": "Please do not send short messages, try a longer sentence instead."
  	 	 	},
  	 	 	"underlevelChatBlock": {
  	 	 	 	"vars": [
  	 	 	 	 	"minLevel"
  	 	 	 	],
- 	 	 	 	"trans": "Kailangan mong maging hindi bababa sa antas ng ${minLevel} upang magpadala ng mga mensahe ng chat",
+ 	 	 	 	"trans": "Kailangan hindi ka bababa sa antas ${minLevel} upang magpadala ng mga mensahe sa usapan",
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
- 	 	 	 	"trans": "makipag -chat",
+ 	 	 	 	"trans": "makipag-usap",
  	 	 	 	"eng": "chat"
  	 	 	},
  	 	 	"gang": {
@@ -358,7 +358,7 @@
  	 	 	 	 	"eng": "${name} is about to run out in a few seconds!"
  	 	 	 	},
  	 	 	 	"refresh": {
- 	 	 	 	 	"trans": "I -refresh ngayon",
+ 	 	 	 	 	"trans": "I-refresh ngayon",
  	 	 	 	 	"eng": "Refresh Now"
  	 	 	 	}
  	 	 	}
@@ -379,11 +379,11 @@
  	 	 	 	"eng": "SL Medical Center"
  	 	 	},
  	 	 	"title": {
- 	 	 	 	"trans": "Flatline",
+ 	 	 	 	"trans": "Flatlined",
  	 	 	 	"eng": "Flatlined"
  	 	 	},
  	 	 	"subTitleSmall": {
- 	 	 	 	"trans": "Kritikal na Error: Neural link na naka -disconnect",
+ 	 	 	 	"trans": "Kritikal na Error: Ang Neural link ay Nadiskonekta",
  	 	 	 	"eng": "Critical Error: Neural Link Disconnected"
  	 	 	},
  	 	 	"progressBarTitle": {
@@ -400,16 +400,16 @@
  	 	"equipment": {
  	 	 	"lowPrintLevelTip": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Mababang ranggo ng pag -print",
+ 	 	 	 	 	"trans": "Mababang ranggo ng pag-printa",
  	 	 	 	 	"eng": "Low Printing Rank"
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Dagdagan ang iyong ranggo sa pag -print upang lumikha ng mas malakas na armas sa pamamagitan ng pag -print ng mas maraming mga cache",
+ 	 	 	 	"trans": "Pataasin ang iyong ranggo sa pa-printa upang makalikha ng mas malakas na armas sa pamamagitan ng pag-printa ng mas maraming cache",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "O sa pamamagitan ng auto print at pagbebenta ng iyong mga cache sa itim na merkado",
+ 	 	 	 	"trans": "O sa pamamagitan ng awtomatikong pag-printa at pagbebenta ng iyong mga cache sa Black Market",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -424,13 +424,13 @@
  	 	"quickSlot": {
  	 	 	"unbindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "I -unbind ang mabilis na puwang?",
+ 	 	 	 	 	"trans": "I-unbind ang mabilis na puwang?",
  	 	 	 	 	"eng": "Unbind quick slot?"
  	 	 	 	}
  	 	 	},
  	 	 	"bindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Pumili ng isang magagamit na item upang magbigkis sa isang mabilis na puwang",
+ 	 	 	 	 	"trans": "Pumili ng isang magagamit na aytem upang ma-bind sa isang mabilis na puwang",
  	 	 	 	 	"eng": "Select a usable item to bind to a quick slot"
  	 	 	 	}
  	 	 	}
@@ -457,11 +457,11 @@
  	 	 	 	"eng": "Friend List"
  	 	 	},
  	 	 	"leaderBoard": {
- 	 	 	 	"trans": "Leader Board",
+ 	 	 	 	"trans": "Leaderboard",
  	 	 	 	"eng": "Leaderboard"
  	 	 	},
  	 	 	"tutorial": {
- 	 	 	 	"trans": "Pagtuturo",
+ 	 	 	 	"trans": "Tutoryal",
  	 	 	 	"eng": "Tutorial"
  	 	 	},
  	 	 	"settings": {
@@ -480,7 +480,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Global Skip allows you to skip the AFK waiting time and finish it instantly.\n    This effect will be applied to all players performing an AFK task",
+ 	 	 	 	 	"trans": "Sa pamamagitan ng Global Skip ay maaari mong laktawan ang oras ng paghihintay, at tapusin ito kaagad.\n    Ang epektong ito ay ilalapat sa lahat ng manlalaro na nagsasagawa ng AFK na gawain",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -503,17 +503,17 @@
  	 	 	},
  	 	 	"confirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Kumpirmahin ang laktawan?",
+ 	 	 	 	 	"trans": "Kumpirmahin ang paggamit ng paglaktaw sa oras?",
  	 	 	 	 	"eng": "Confirm use skip?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "Ang Global Skip ay laktawan ang oras ng paghihintay para sa lahat ng mga manlalaro na gumaganap ng gawain ng AFK",
+ 	 	 	 	 	"trans": "Lalampasan ng Global Skip ang oras ng paghihintay para sa lahat ng manlalaro na nagsasagawa ng gawain sa AFK",
  	 	 	 	 	"eng": "Global Skip will skip the waiting time for all players performing AFK task"
  	 	 	 	}
  	 	 	},
  	 	 	"inProgressBox": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Pandaigdigang laktawan sa pag -unlad",
+ 	 	 	 	 	"trans": "Kasalukuyang isinasagawa ang Global Skip",
  	 	 	 	 	"eng": "Global Skip in progress"
  	 	 	 	},
  	 	 	 	"subtitle": {
@@ -525,23 +525,23 @@
  	 	 	 	}
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Global Skip allows you to skip the AFK waiting time and finish instantly.\n    This effect will be applied to all other players performing AFK tasks",
+ 	 	 	 	"trans": "Sa pamamagitan ng Global Skip ay maaari mong laktawan ang oras ng paghihintay, at tapusin ito kaagad.\n    Ang epektong ito ay ilalapat sa lahat ng manlalaro na nagsasagawa ng AFK na gawain",
  	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all players performing an AFK task"
  	 	 	}
  	 	},
  	 	"list": {
  	 	 	"longPressToMultiSelect": {
- 	 	 	 	"trans": "Mahabang pindutin sa multi-seleksyon",
+ 	 	 	 	"trans": "Pindutin nang matagal upang pumili ng marami",
  	 	 	 	"eng": "Long press to multi-select"
  	 	 	}
  	 	},
  	 	"inventory": {
  	 	 	"items": {
- 	 	 	 	"trans": "mga item",
+ 	 	 	 	"trans": "mga aytem",
  	 	 	 	"eng": "items"
  	 	 	},
  	 	 	"secretKeys": {
- 	 	 	 	"trans": "Lihim na Susi",
+ 	 	 	 	"trans": "mga lihim na susi",
  	 	 	 	"eng": "secret keys"
  	 	 	},
  	 	 	"autoScrap": {
@@ -559,11 +559,11 @@
  	 	 	 	"eng": "Inventory"
  	 	 	},
  	 	 	"itemInbox": {
- 	 	 	 	"trans": "Inbox ng item",
+ 	 	 	 	"trans": "Inbox ng aytem",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
  	 	 	"crafting": {
- 	 	 	 	"trans": "Crafting",
+ 	 	 	 	"trans": "Paggawa",
  	 	 	 	"eng": "Crafting"
  	 	 	}
  	 	},
@@ -574,13 +574,13 @@
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "There is no community lore for this item yet. Be the first to create one for it.",
+ 	 	 	 	 	"trans": "Wala pang community lore para sa aytem na ito, Maaaring ikaw ang unang gumawa ng isa para dito.",
  	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
  	 	 	 	}
  	 	 	},
  	 	 	"openButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Pamayanan ng pamayanan",
+ 	 	 	 	 	"trans": "Lore ng Komunidad",
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
@@ -941,7 +941,7 @@
  	 	 	 	"eng": "Spend Bitcoins to increase how many items you can put in your stall at the same time"
  	 	 	},
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "Kailangan mong maging hindi bababa sa antas 4 upang ma -access ang merkado",
+ 	 	 	 	"trans": "Kailangan hindi ka bababa sa antas 4 upang ma-access ang pamilihan",
  	 	 	 	"eng": "You need to be at least level 4 to access the market"
  	 	 	},
  	 	 	"levelSelect": {
@@ -957,7 +957,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noItems": {
- 	 	 	 	"trans": "there are currently no items for sale in this category",
+ 	 	 	 	"trans": "sa ngayon ay walang mga aytem na ibinebenta para sa kategoryang ito",
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
@@ -970,26 +970,26 @@
  	 	 	},
  	 	 	"stall": {
  	 	 	 	"sellItemButton": {
- 	 	 	 	 	"trans": "Ilagay ang item sa pagbebenta",
+ 	 	 	 	 	"trans": "Ilagay ang aytem sa benta",
  	 	 	 	 	"eng": "Put Item On Sale"
  	 	 	 	},
  	 	 	 	"selectItemForSale": {
- 	 	 	 	 	"trans": "Mangyaring piliin ang item na nais mong ibenta",
+ 	 	 	 	 	"trans": "Mangyaring piliin ang aytem na nais mong ibenta",
  	 	 	 	 	"eng": "Please select the item you want to sell"
  	 	 	 	}
  	 	 	}
  	 	},
  	 	"afkTask": {
  	 	 	"newbieTip": {
- 	 	 	 	"trans": "Ang gawain ay magpapatuloy kahit na isara mo ang laro",
+ 	 	 	 	"trans": "Magpapatuloy ang gawain kahit na itigil mo ang laro",
  	 	 	 	"eng": "The task will continue even if you close the game"
  	 	 	},
  	 	 	"syncing": {
- 	 	 	 	"trans": "Pag -sync",
+ 	 	 	 	"trans": "Nagsi-sync",
  	 	 	 	"eng": "Syncing"
  	 	 	},
  	 	 	"manualRefresh": {
- 	 	 	 	"trans": "Manu -manong pag -refresh",
+ 	 	 	 	"trans": "Manu-manong Pag-refresh",
  	 	 	 	"eng": "Manual Refresh"
  	 	 	},
  	 	 	"abort": {
